fix: image overlapping drawers on large displays

--- a/src/sections/drawers/styles.module.scss
+++ b/src/sections/drawers/styles.module.scss
@@ -82,6 +82,6 @@
     grid-column: 9/13;
   }
   @include mq("desktop") {
-    grid-column: 7/13;
+    grid-column: 8/13;
   }
 }
